--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Grilla de botones</h1>
+    <h1>Grilla de botones de Juani</h1>
     <div class="grid-container">
         <button class="btn-1">Botón 1</button>
         <button class="btn-2">Botón 2</button>
